--- a/SeKAD/public/css/login.css
+++ b/SeKAD/public/css/login.css
@@ -40,6 +40,7 @@ body {
 }
 
 .login-box form input[type="text"],
+.login-box form input[type="email"],
 .login-box form input[type="password"] {
     width: 93%;
     padding: 10px;
